--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible">
-        <link rel="shortcut icon" href="https://testerzon.github.io/w/favicon.ico">
+        <link rel="shortcut icon" href="https://wospmoskwa.github.io/2021/favicon.ico">
         <title>WOŚP Moskwa 2021</title>
         <link rel="stylesheet" href="css.css" type="text/css" />
          <style>
