--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
         <!-- contacts-->
         <h2>Kontakt</h2>
       <div class="goods" id="contacts"><div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face"></a><br/><a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div></div>    
-         <div class="br"></div><!-- /contacts-->
-   </div>       
-       
-        
-  
+         <div class="br"></div>
+      <!-- /contacts-->
+   </div> 
     </body>
     </html>
