--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible">
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
-        <title>WOŚP Moskwa 2021</title>
+        <title>WOŚP Moskwa 2021 | Nonprofit Organization</title>
         <link rel="stylesheet" href="css.css" type="text/css" />
          <style>
         </style>
@@ -34,8 +34,8 @@
         <h2>Handmade</h2>
         <div class="goods" id="polish">            
         <div class="book-01"><img src="img/lalka_01.jpg" title="Lalka, Bolesław Prus"><b>1. Lalka + audiobook</b><i>Bolesław Prus</i><b>000 rub.</b></div>
-        <div class="book-01"><img src="img/sieniewicz_01.jpg"><b>2. Rebelio</b><i>Moriusz Sieniewicz</i></div>
-        <div class="book-01"><img src="img/balladyna_01.jpg"><b>3. Balladyna</b><i>Juliusz Słowacki</i></div>  
+        <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>2. Rebelio</b><i>Moriusz Sieniewicz</i></div>
+        <div class="book-01"><img src="img/balladyna_01.jpg"  title="Balladyna, Juliusz Słowacki"><b>3. Balladyna</b><i>Juliusz Słowacki</i></div>  
         <div class="book-01"><img src="img/250_01.jpg" title="250 fotografii zamków i palaców Polskich"><b>4. 250 fotografii<br/>zamków i palaców Polskich</b><i>Warszawa, 1957</i><b>000 rub.</b></div> 
         <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco"><b>5. Tropiliśmy słonia<br/>Tiemoco</b> <i>Bernhard Grzimek</i></div>
        <div class="br"></div>
@@ -44,11 +44,11 @@
         <!-- russian-->
         <h2>Handmade</h2>
      <div class="goods" id="russian">
-         <div class="book-01"><img src="img/mickiewicz_01.jpg"><b>Стихотворения. Поэмы</b><i>Адам Мицкевич</i></div>  
-        <div class="book-01"><img src="img/kraal_01.jpg"><b>Королю червонному - дорога дальняя</b><i>Ханна Крааль</i></div>  
-        <div class="book-01"><img src="img/leopold_staff_01.jpg"><b>Избранная лирика</b><i>Леопольд Стафф</i></div> 
-         <div class="book-01"><img src="img/jasienski_01.jpg"><b>Избранное</b><i>Бруно Ясенский</i></div>  
-        <div class="book-01"><img src="img/szults_01.jpg"><b>Уцелевшие</b><i>Бруно Шульц</i></div>          
+         <div class="book-01"><img src="img/mickiewicz_01.jpg" title="Стихотворения. Поэмы, Адам Мицкевич"><b>Стихотворения. Поэмы</b><i>Адам Мицкевич</i></div>  
+        <div class="book-01"><img src="img/kraal_01.jpg" title="Королю червонному - дорога дальняя"><b>Королю червонному - дорога дальняя</b><i>Ханна Крааль</i></div>  
+        <div class="book-01"><img src="img/leopold_staff_01.jpg" title="Избранная лирика"><b>Избранная лирика</b><i>Леопольд Стафф</i></div> 
+         <div class="book-01"><img src="img/jasienski_01.jpg" title="Избранное"><b>Избранное</b><i>Бруно Ясенский</i></div>  
+        <div class="book-01"><img src="img/szults_01.jpg" title="Уцелевшие"><b>Уцелевшие</b><i>Бруно Шульц</i></div>          
         <div class="br"></div>
     </div>
         <!-- /russian--> 
