--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
         
   <div class="main-container">
         
-     <!-- handmade-->
+          <!-- handmade-->
         <h2>Handmade</h2>
          <div class="goods" id="handmade">         
-        <div class="book-01"><img src="img/tania_01.jpg"><b>Torebka</b> <i>Aksamit, haft,25x25 cm</i><b>000 rub.</b></div>  
-        <div class="book-01"><img src="img/tania_02.jpg"><b>Torebka</b> <i>Aksamit, haft, 35x40 cm</i><b>000 rub.</b></div>
-        <div class="book-01"><img src="img/tania_03.jpg"><b>Wisiorek haftowany</b> <i>5x7 cm</i><b>000 rub.</b></div> 
-        <div class="book-01"><img src="img/tania_04.jpg"><b>Wisiorek haftowany</b> <i>7x5 cm</i><b>000 rub.</b></div>      
+        <div class="book-01"><img src="img/tania_01.jpg"><b>Torebka #1</b> <i>Aksamit, haft,25x25 cm</i><b>000 rub.</b></div>  
+        <div class="book-01"><img src="img/tania_02.jpg"><b>Torebka #2</b> <i>Aksamit, haft, 35x40 cm</i><b>000 rub.</b></div>
+        <div class="book-01"><img src="img/tania_03.jpg"><b>Wisiorek haftowany #1</b> <i>5x7 cm</i><b>000 rub.</b></div> 
+        <div class="book-01"><img src="img/tania_04.jpg"><b>Wisiorek haftowany #2</b> <i>7x5 cm</i><b>000 rub.</b></div>      
         <div class="br"></div>             
    </div>
         <!--/handmade-->
-        <!-- polish-->
+          <!-- polish-->
         <h2>Handmade</h2>
         <div class="goods" id="polish">            
-        <div class="book-01"><img src="img/lalka_01.jpg" title="Lalka, Bolesław Prus"><b>1. Lalka + audiobook</b><i>Bolesław Prus</i><b>000 rub.</b></div>
-        <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>2. Rebelio</b><i>Moriusz Sieniewicz</i></div>
-        <div class="book-01"><img src="img/balladyna_01.jpg"  title="Balladyna, Juliusz Słowacki"><b>3. Balladyna</b><i>Juliusz Słowacki</i></div>  
-        <div class="book-01"><img src="img/250_01.jpg" title="250 fotografii zamków i palaców Polskich"><b>4. 250 fotografii<br/>zamków i palaców Polskich</b><i>Warszawa, 1957</i><b>000 rub.</b></div> 
-        <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco"><b>5. Tropiliśmy słonia<br/>Tiemoco</b> <i>Bernhard Grzimek</i></div>
+        <div class="book-01"><img src="img/lalka_01.jpg" title="Lalka, Bolesław Prus"><b>Lalka + audiobook</b><i>Bolesław Prus</i><b>000 rub.</b></div>
+        <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>Rebelio</b><i>Moriusz Sieniewicz</i></div>
+        <div class="book-01"><img src="img/balladyna_01.jpg"  title="Balladyna, Juliusz Słowacki"><b>Balladyna</b><i>Juliusz Słowacki</i></div>  
+        <div class="book-01"><img src="img/250_01.jpg" title="250 fotografii zamków i palaców Polskich"><b>250 fotografii<br/>zamków i palaców Polskich</b><i>Warszawa, 1957</i><b>000 rub.</b></div> 
+        <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia<br/>Tiemoco</b> <i>Bernhard Grzimek</i></div>
        <div class="br"></div>
         </div>
         <!-- /polish-->
@@ -45,11 +45,13 @@
         <h2>Handmade</h2>
      <div class="goods" id="russian">
          <div class="book-01"><img src="img/mickiewicz_01.jpg" title="Стихотворения. Поэмы, Адам Мицкевич"><b>Стихотворения. Поэмы</b><i>Адам Мицкевич</i></div>  
-        <div class="book-01"><img src="img/kraal_01.jpg" title="Королю червонному - дорога дальняя"><b>Королю червонному - дорога дальняя</b><i>Ханна Крааль</i></div>  
-        <div class="book-01"><img src="img/leopold_staff_01.jpg" title="Избранная лирика"><b>Избранная лирика</b><i>Леопольд Стафф</i></div> 
-         <div class="book-01"><img src="img/jasienski_01.jpg" title="Избранное"><b>Избранное</b><i>Бруно Ясенский</i></div>  
-        <div class="book-01"><img src="img/szults_01.jpg" title="Уцелевшие"><b>Уцелевшие</b><i>Бруно Шульц</i></div>          
-        <div class="br"></div>
+        <div class="book-01"><img src="img/kraal_01.jpg" title="Королю червонному - дорога дальняя, Ханна Крааль"><b>Королю червонному - дорога дальняя</b><i>Ханна Крааль</i></div>  
+        <div class="book-01"><img src="img/leopold_staff_01.jpg" title="Избранная лирика, Леопольд Стафф"><b>Избранная лирика</b><i>Леопольд Стафф</i></div> 
+         <div class="book-01"><img src="img/jasienski_01.jpg" title="Избранное, Бруно Ясенский"><b>Избранное</b><i>Бруно Ясенский</i></div>  
+        <div class="book-01"><img src="img/szults_01.jpg" title="Уцелевшие, Бруно Шульц"><b>Уцелевшие</b><i>Бруно Шульц</i></div>  
+         <div class="book-01"><img src="img/broniewski_01.jpg" title="Два голоса, или Поминовение, Владислав Броневский"><b>Два голоса, или Поминовение</b><i>Владислав Броневский</i></div>   
+        <div class="book-01"><img src="img/selwa_01.jpg" title="Сельва, Мачей Кучиньский"><b>Сельва</b><i>Мачей Кучиньский</i></div>
+         <div class="br"></div>
     </div>
         <!-- /russian--> 
         <!-- contacts-->
