--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="main-container">
         
      <!-- handmade-->
-        <h2>Książki po polsku</h2>
+        <h2>Handmade</h2>
          <div class="goods" id="handmade">         
         <div class="book-01"><img src="img/tania_01.jpg"><b>Torebka #1</b> <i>Aksamit, haft,25x25 cm</i><b>000 rub.</b></div>  
         <div class="book-01"><img src="img/tania_02.jpg"><b>Torebka #2</b> <i>Aksamit, haft, 35x40 cm</i><b>000 rub.</b></div>
@@ -31,7 +31,7 @@
    </div>
         <!--/handmade-->
           <!-- polish-->
-        <h2>#</h2>
+        <h2>Książki po polsku</h2>
         <div class="goods" id="polish">            
         <div class="book-01"><img src="img/lalka_01.jpg" title="Lalka, Bolesław Prus"><b>Lalka + audiobook</b><i>Bolesław Prus</i><b>000 rub.</b></div>
         <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>Rebelio</b><i>Moriusz Sieniewicz</i></div>
