--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="book-01"><img src="img/balladyna_01.jpg"  title="Balladyna, Juliusz Słowacki"><b>Balladyna</b><i>Juliusz Słowacki</i></div>  
         <div class="book-01"><img src="img/250_01.jpg" title="250 fotografii zamków i palaców Polskich"><b>250 fotografii<br/>zamków i palaców Polskich</b><i>Warszawa, 1957</i><b>000 rub.</b></div> 
        <div class="book-01"><img src="img/maria_konopnicka_01.jpg" title="Novele, Maria Konopnicka<"><b>Nowele</b> <i>Maria Konopnicka</i></div>
-        <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia<br/>Tiemoco</b> <i>Bernhard Grzimek</i></div>
+        <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia Tiemoco</b> <i>Bernhard Grzimek</i></div>
        <div class="br"></div>
         </div>
         <!-- /polish-->
