--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <!-- /polish-->
         <!-- russian-->
-        <h2>Книги на русском языке</h2>
+        <h2>Книги польских авторов на русском языке</h2>
      <div class="goods" id="russian">
          <div class="book-01"><img src="img/mickiewicz_01.jpg" title="Стихотворения. Поэмы, Адам Мицкевич"><b>Стихотворения. Поэмы</b><i>Адам Мицкевич</i></div>  
         <div class="book-01"><img src="img/kraal_01.jpg" title="Королю червонному - дорога дальняя, Ханна Крааль"><b>Королю червонному - дорога дальняя</b><i>Ханна Крааль</i></div>  
