--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible">
         <link rel="shortcut icon" href="https://testerzon.github.io/w/favicon.ico">
         <title>WOŚP Moskwa 2021</title>
-        <link rel="stylesheet" href="css.css" type="text/css" />
+        <link rel="stylesheet" href="css.css?01" type="text/css" />
          <style>
         </style>
       </head>
