--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="banner"></div>
      <!-- top menu-->
         <div class="topmenu-wrap">
-<div class="topmenu"><a href="#handmade">Handmade</a>&nbsp;|&nbsp;<a href="#polish">Książki po polsku</a>&nbsp;|&nbsp;<a href="#russian">Книги на русском</a>&nbsp;|&nbsp;<a href="#albumy">Albumy, CD</a>&nbsp;|&nbsp;<a href="#contacts">Kontakt</a></div>
+<div class="topmenu"><a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#polish">Książki po polsku</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#russian">Книги на русском</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#albumy">Albumy, CD</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contacts">Kontakt</a></div>
         <div class="br"></div>
  </div>
    <!-- /top menu-->
