--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <div class="book-01"><img src="img/250_01.jpg" title="250 fotografii zamków i palaców Polskich"><b>250 fotografii<br/>zamków i palaców Polskich</b><i>Warszawa, 1957</i><b>000 rub.</b></div> 
        <div class="book-01"><img src="img/maria_konopnicka_01.jpg" title="Novele, Maria Konopnicka<"><b>Nowele</b> <i>Maria Konopnicka</i></div>
         <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia Tiemoco</b> <i>Bernhard Grzimek</i></div>
-       <div class="br"></div>
+       <div class="book-01"></div>
+            <div class="br"></div>
         </div>
         <!-- /polish-->
         <!-- russian-->
@@ -52,6 +53,7 @@
         <div class="book-01"><img src="img/szults_01.jpg" title="Уцелевшие, Бруно Шульц"><b>Уцелевшие</b><i>Бруно Шульц</i></div>  
          <div class="book-01"><img src="img/broniewski_01.jpg" title="Два голоса, или Поминовение, Владислав Броневский"><b>Два голоса, или Поминовение</b><i>Владислав Броневский</i></div>   
         <div class="book-01"><img src="img/selwa_01.jpg" title="Сельва, Мачей Кучиньский"><b>Сельва</b><i>Мачей Кучиньский</i></div>
+         <div class="book-01"></div>
          <div class="br"></div>
     </div>
         <!-- /russian--> 
