--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
      <div class="goods" id="albumy">
          <div class="book-01"><img src="img/matejko_01.jpg" title="Jan Matejko"><b>Jan Matejko</b></div>  
         <div class="book-01"><img src="img/michalowski_01.jpg" title="Piotr Michałowski"><b>Piotr Michałowski</b></div>  
+         <div class="book-01"><img src="img/polish_art_01.jpg" title="Искусство Польши"><b>Искусство Польши</b></div>
          <div class="book-01"><img src="img/250_01.jpg" title="250 fotografii zamków i palaców Polskich"><b>250 fotografii<br/>zamków i palaców Polskich</b><i>Warszawa, 1957</i><b>000 rub.</b></div> 
-         <div class="book-01"><img src="img/malopolska_01.jpg" title="Małopolska"><b>Małopolska</b></div> 
-         <div class="book-01"><img src="img/polish_art_01.jpg" title="Искусство Польши"><b>Искусство Польши</b></div> 
+         <div class="book-01"><img src="img/malopolska_01.jpg" title="Małopolska"><b>Małopolska</b></div>           
          <div class="book-01"><img src="img/gorecki_01.jpg" title="Henryk Górecki"><b>Henryk Górecki</b></div> 
+         <div class="book-01"></div>
          <div class="br"></div>
     </div>
         <!-- /Albumy--> 
