--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
          <div class="book-01"><img src="img/morris_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>
          <div class="book-01"><img src="img/pawlikowska_01.jpg" title="Błondynka w Japonii"><b>Błondynka w Japonii</b> <i>Beata Pawlikowska</i></div>
          <div class="book-01"><img src="img/elementarz_01.jpg" title="Elementarz"><b>Elementarz współczesny</b> <i>Anna Boboryk</i></div>
-         <div class="book-01"><!--img src="img/slon_01.jpg" title="Hurra Po Polsku III"--><b>Hurra Po Polsku III</b> <i>Prolog 2017</i></div>  
+         <div class="book-01"><img src="img/hurra_03.jpg" title="Hurra Po Polsku III"><b>Hurra Po Polsku III +2 CD</b> <i>Prolog 2017</i></div> 
         <div class="br"></div>
       </div>
         <!-- /polish-->
@@ -113,8 +113,7 @@
          <div class="book-01"><img src="img/wstyd_kino_01.jpg" title="Wstyd"><b>Wstyd</b><i>DVD</i></div>
          <div class="br"></div>
     </div>
-        <!-- /dvd--> 
-      
+        <!-- /dvd-->       
         <!-- contacts-->
         <h2>Kontakt</h2>
       <div class="goods" id="contacts">
