--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div><div class="br"></div></br/></div>    
          <div class="br"></div>
       <!-- /contacts-->
-   </div> <!-- Yandex.Metrika counter -->
+   </div> 
+   <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
@@ -135,6 +136,6 @@
    });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/69635794" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->            
+<!-- /Yandex.Metrika counter -->        
     </body>
     </html>
