--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!--/Ozdoby choinkowe-->
       
      <!-- handmade-->
-        <h2>Handmade: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</h2>
+        <h2>Handmade: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</span></h2>
          <div class="goods" id="handmade"> 
          <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1</b> <i>Znaczek, ~3-4 cm</i><b>000 rub.</b></div>
         <div class="book-01"><img src="img/jr_02.jpg"><b>Jednorożec #2</b> <i>Znaczek, ~3-4 cm</i><b>000 rub.</b></div>
