--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia Tiemoco</b> <i>Bernhard Grzimek</i></div>
          <div class="book-01"><img src="img/morris_01.jpg" title="Tatuażysta z Auszwitz"><b>Tatuażysta z Auszwitz</b><i>Heather Morris</i></div> 
           <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>
-         <div class="book-01"><img src="img/morris_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>
+         <!--div class="book-01"><img src="img/morris_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div-->
          <div class="book-01"><img src="img/pawlikowska_01.jpg" title="Błondynka w Japonii"><b>Błondynka w Japonii</b> <i>Beata Pawlikowska</i></div>
          <div class="book-01"><img src="img/elementarz_01.jpg" title="Elementarz"><b>Elementarz współczesny</b> <i>Anna Boboryk</i></div>
          <div class="book-01"><img src="img/hurra_03.jpg" title="Hurra Po Polsku III"><b>Hurra Po Polsku III +2 CD</b> <i>Prolog 2017</i></div> 
