--- a/0.html
+++ b/0.html
@@ -39,16 +39,21 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
 .contacts a.face {background:url(img/face.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
 .contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
    
- @media screen and (min-device-width: 641px) and (max-device-width: 1940px)  {
+ @media screen and (min-device-width: 801px) and (max-device-width: 1940px)  {
    .banner {background-color:#00305B; background-image: url(img/111.png); background-position:top center; background-repeat:no-repeat; height:360px;}
    .topmenu {font-size:17px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:960px;}
    .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }       
       }
-      @media screen and (min-device-width: 300px) and (max-device-width: 640px) {
+      @media screen and (min-device-width: 641px) and (max-device-width: 800px) {
+  .banner {background-color:#00305B; background-image: url(img/111_640.png); background-position:top center; background-repeat:no-repeat; height:204px;}
+.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:640px;}
+ .main-container {margin:auto; padding-top:5px; text-align:center; max-width:640px; min-width:480px;}     
+ .goods {max-width:640px;}
+        @media screen and (min-device-width: 300px) and (max-device-width: 640px) {
   .banner {background-color:#00305B; background-image: url(img/111_320.png); background-position:top center; background-repeat:no-repeat; height:102px;}
 .topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:320px;}
  .main-container {margin:auto; padding-top:5px; text-align:center; max-width:480px; min-width:320px;}     
- .goods {max-width:320px;}
+ .goods {max-width:320px;}        
       }
    
   </style>
