--- a/0.html
+++ b/0.html
@@ -44,16 +44,16 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
    .topmenu {font-size:17px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:960px;}
    .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }       
       }
-      @media screen and (min-device-width: 641px) and (max-device-width: 800px) {
+      @media screen and (min-device-width: 561px) and (max-device-width: 800px) {
   .banner {background-color:#00305B; background-image: url(img/111_640.png); background-position:top center; background-repeat:no-repeat; height:204px;}
 .topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:640px;}
- .main-container {margin:auto; padding-top:5px; text-align:center; max-width:640px; min-width:480px;}     
+ .main-container {margin:auto; padding-top:5px; text-align:center; max-width:800px; min-width:560px;}     
  .goods {max-width:640px;}
-        @media screen and (min-device-width: 300px) and (max-device-width: 640px) {
+        @media screen and (max-device-width: 560px) {
   .banner {background-color:#00305B; background-image: url(img/111_320.png); background-position:top center; background-repeat:no-repeat; height:102px;}
-.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:320px;}
- .main-container {margin:auto; padding-top:5px; text-align:center; max-width:480px; min-width:320px;}     
- .goods {max-width:320px;}        
+.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; min-width:320px;}
+ .main-container {margin:auto; padding-top:5px; text-align:center; min-width:320px;}     
+ .goods {min-width:320px;}        
       }
    
   </style>
