--- a/0.html
+++ b/0.html
@@ -46,14 +46,14 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
       }
       @media screen and (min-device-width: 561px) and (max-device-width: 800px) {
   .banner {background-color:#00305B; background-image: url(img/111_640.png); background-position:top center; background-repeat:no-repeat; height:204px;}
-.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:640px;}
- .main-container {margin:auto; padding-top:5px; text-align:center; max-width:800px; min-width:560px;}     
- .goods {max-width:640px;}
+.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:800px;}
+ .main-container {margin:auto; padding-top:5px; text-align:center; max-width:800px;}     
+ .goods {max-width:800px;}
         @media screen and (max-device-width: 560px) {
   .banner {background-color:#00305B; background-image: url(img/111_320.png); background-position:top center; background-repeat:no-repeat; height:102px;}
-.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; min-width:320px;}
- .main-container {margin:auto; padding-top:5px; text-align:center; min-width:320px;}     
- .goods {min-width:320px;}        
+.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:560px;}
+ .main-container {margin:auto; padding-top:5px; text-align:center; max-width:560px;}     
+ .goods {max-width:560px;}        
       }
    
   </style>
