--- a/0.html
+++ b/0.html
@@ -10,7 +10,7 @@
 body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-color:#f1f1f1; font-color:#444;  }
 .br {clear:both;}
  h2 {font-size:17px; font-weight:normal; text-transform:uppercase; color:#337ab7; margin:10px 0px 5px 0px; text-align:left;}
-  
+      .main-container {border:1px #ddd solid;}
 /*.main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; min-width:580px; }*/
 .topmenu-wrap {background:#E6E6E6; height:auto; margin-bottom:10px; clear:both; padding-bottom:10px; }
 .topmenu a {display:inline block; text-decoration:none; margin:11px 0px 10px 0px; color:#337ab7; }
