--- a/0.html
+++ b/0.html
@@ -51,9 +51,9 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
  .goods {max-width:800px;}
         @media screen and (min-device-width: 320px)  {
   .banner {background-color:#00305B; background-image: url(img/111_320.png); background-position:top center; background-repeat:no-repeat; height:102px;}
-.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:320px;}
- .main-container {margin:auto; padding-top:5px; text-align:center; max-width:320px;}     
- .goods {max-width:320px;}        
+.topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; min-width:320px;}
+ .main-container {margin:auto; padding-top:5px; text-align:center; min-width:320px;}     
+ .goods {min-width:320px;}        
       }
    
   </style>
