--- a/0.html
+++ b/0.html
@@ -40,17 +40,17 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
 .contacts a.wosp {background:url(img/wosp_s.png) no-repeat; padding-left: 48px; line-height:42px; height: 42px; text-decoration:none;}
    
  @media screen and (min-device-width: 801px) and (max-device-width: 1940px)  {
-   .banner {background-color:#00305B; background-image: url(img/111.png); background-position:top center; background-repeat:no-repeat; height:360px;}
+   .banner {background-color:#00305B; background-image: url(img/111.png); background-position:center; background-repeat:no-repeat; height:360px;}
    .topmenu {font-size:17px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:960px;}
    .main-container {margin:auto; padding-top:5px; text-align:center; max-width:960px; }       
       }
       @media screen and (min-device-width: 321px) and (max-device-width: 800px) {
-  .banner {background-color:#00305B; background-image: url(img/111_640.png); background-position:top center; background-repeat:no-repeat; height:204px;}
+  .banner {background-color:#00305B; background-image: url(img/111_640.png); background-position:center; background-repeat:no-repeat; height:204px;}
 .topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:800px;}
  .main-container {margin:auto; padding-top:5px; text-align:center; max-width:800px;}     
  .goods {max-width:800px;}
         @media screen and (min-device-width: 320px)  {
-  .banner {background-color:#00305B; background-image: url(img/111_320.png); background-position:top center; background-repeat:no-repeat; height:102px;}
+  .banner {background-color:#00305B; }
 .topmenu {font-size:14px; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; min-width:320px;}
  .main-container {margin:auto; padding-top:5px; text-align:center; min-width:320px;}     
  .goods {min-width:320px;}        
@@ -59,7 +59,7 @@ body {margin:0px; padding:0px; font-family:Arial Narrow, sans-serif; background-
   </style>
       </head>
     <body>
-        <div class="banner">iui</div>
+        <div class="banner"><div style="background-image: url(img/111_320.png); background-position:center; background-repeat:no-repeat; height:102px;"></div></div>
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
