--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>    
     <head>
@@ -7,15 +6,16 @@
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
         <title>WOŚP Moskwa 2021</title>
         <link rel="stylesheet" href="css.css" type="text/css" />
-      </head>
+    </head>
     <body>
-        <div class="banner"></div>
+        <div class="banner" title="WOŚP Moskwa 2021"></div>
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
 <div class="topmenu"><a href="#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#polish">Książki&nbsp;po&nbsp;polsku</a>&nbsp;&nbsp;|&nbsp; <a href="#russian">Книги&nbsp;на&nbsp;русском</a>&nbsp;&nbsp;|&nbsp; <a href="#albumy">Albumy</a>&nbsp;&nbsp;|&nbsp; <a href="#dvd">DVD,&nbsp;CD</a>&nbsp;|&nbsp; <a href="#contacts">Kontakt</a></div><div class="br"></div>
  </div><div class="br"></div>
-   <!-- /top menu-->        
+   <!-- /top menu-->
+        
   <div class="main-container">
          <!-- Ozdoby choinkowe-->
       <h2>Ozdoby choinkowe: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</span></h2>
@@ -41,7 +41,6 @@
              <div class="book-01"><img src="img/choinka_013.jpg"><b>Ozdoba #13</b></div>
              <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14</b></div>
              <div class="book-01"><img src="img/choinka_015.jpg"><b>Ozdoba #15</b></div>
-             <div class="book-01"><img src="img/hearts_01.jpg"><b>#16</b></div>
         <div class="br"></div>             
    </div>
         <!--/Ozdoby choinkowe-->
