--- a/index.html
+++ b/index.html
@@ -17,14 +17,20 @@
    <!-- /top menu-->
         
   <div class="main-container">
+       <!--h1>Licytacja: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</span></h1>
+         <div class="goods" id="ozdoby_choinkowe">
+             <div class="book-01"><img src="img/rybas_01.jpg"><b>Rybas</b></div>
+             <div class="book-01"><img src="img/author_01.jpg"><b>Franciszek Pieczka</b><i>Dariusz Domański</i></div>
+             <div class="br"></div>   
+         </div-->
          <!-- Ozdoby choinkowe-->
       <h2>Ozdoby choinkowe: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</span></h2>
          <div class="goods" id="ozdoby_choinkowe">  
              <div class="book-01"><img src="img/aniols.jpg"><b>Aniołki</b></div>  
-              <div class="book-01"><img src="img/zenek_i_ona.jpg"><b>Zenek i Ona</b></div> 
+             <div class="book-01"><img src="img/zenek_i_ona.jpg"><b>Zenek i Ona</b></div> 
              <div class="book-01"><img src="img/choinka_03.jpg" title="Amorek"><b>Amorek</b></div> 
-        <div class="book-01"><img src="img/choinka_01.jpg"><b>Ozdoba #1</b></div>  
-       <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b></div>   
+             <div class="book-01"><img src="img/choinka_01.jpg"><b>Ozdoba #1</b></div>  
+             <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b></div>   
             <div class="book-01"><img src="img/stroik_01.jpg"><b>Stroik #1</b></div> 
             <div class="book-01"><img src="img/stroik_02.jpg"><b>Stroik #2</b></div> 
             <div class="book-01"><img src="img/stroik_03.jpg"><b>Stroik #3</b></div> 
